fixed nav overflow

--- a/shengdesign_react/src/component/navigation/nav.module.css
+++ b/shengdesign_react/src/component/navigation/nav.module.css
@@ -13,12 +13,20 @@
 
 .brand{
    position: absolute;
-   top: 50%;
+   display: flex;
+   justify-content: center;
+   top: 0%;
    left: 0%;
-   transform: translate(50%, -50%);
+   background-color: #ff006f;
+   border: 1px solid red;
+   height: 100%;
+   width: 100px;
+   text-align: center;
 }
 
 .brand > a{
+   display: flex;
+   align-items: center;
    color: white;
    font-weight: bold;
 }
